Removed 100vh from height of style to fix whitespace.

--- a/src/styles/_task-view.scss
+++ b/src/styles/_task-view.scss
@@ -2,7 +2,6 @@ $block-class:'task-view';
 @at-root {
     .#{$block-class} {
         width: 90vw;
-        height: 100vh;
 
         &__text-container {
             display: flex;
